2006-08-18  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen,
        * configure.in: Invoke new macro.
        * tcljava.m4 (AC_GCC_BUGS): Add new macro
	that attempts to detect a tricky bug known to
	exist in gcc 4.1.0. This optimizer bug causes
	failures when converting a long long back into
	a pointer. This logic is used to store a
	pointer to a C interp structure inside a jlong
	in the Java interp object.
	[Bug 1528278]

2006-08-05  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tjc/tcl/lang/TJCCompileCmd.java (TclCompile,
        isClassDefined):
        Add logic that detects the case where a Tcl proc
        with the same name is compiled more than once.
        This logic will generate a unique name so that
        a ClassLoader error because of a duplicate
        definition is avoided.
        * tests/tjc/tjcthread.test: Add test case
        for compilation of same proc in two different
        interpreters. Add test case for recompilation
        of Tcl proc with the same name.

2006-08-05  Mo DeJong  <mdejong@users.sourceforge.net>

        * docs/TJC/index.html: Separate docs for
        batch and runtime mode into two sections.
        * docs/TJC/module.html: Add +inline-expr info.

2006-08-04  Mo DeJong  <mdejong@users.sourceforge.net>

        * Makefile.in: Remove new_features.txt.
        * README.jacl:
        * README.tclblend: Mention WhatsNew.html.
        * new_features.txt: Removed.
        * docs/Topics/WhatsNew.html: Create a
        New Features HTML page containing new 1.4
        features and importing the old entries
        from new_features.txt.
        * docs/Topics/index.html: Add link
        to WhatsNew.html.

2006-08-04  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tcljava/tcl/lang/TclClassLoader.java:
        Avoid throwing NullPointerException when
        method can just return null.
        * src/tjc/tcl/lang/TJCThread.java: Refactor