@@ -1,3 +1,8 @@
+2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>
+
+        * src/jacl/tcl/lang/Expression.java:
+        Make expr pool default to 50 ExprValue objects.
+
 2006-08-18  Mo DeJong  <mdejong@users.sourceforge.net>
 
         * configure: Regen,
